refactor: main file and update pom
Main file got refactored but the structure is the same as before.